syntax = "proto3";

option csharp_namespace = "IdentityServer.Protos";

service UserProtoService {
	rpc GetUsers() returns (UserModel);
}

message UserModel {
	string id = 1;
	string name = 2;
}